# Form-Reader-Comparitor

./: .gitignore  GLOSSARY.md  PLAN.md  README.md  STAGE_1.md  env.example  main.py  pyproject.toml
src/form_reader/: __init__.py  main.py
src/form_reader/models/: __init__.py  batch.py  fields_config.py
src/form_reader/services/: __init__.py  export_parser.py  gemini_client.py  image_loader.py  ocr_service.py  ollama_client.py
src/form_reader/ui/: batch_worker.py  define_fields_dialog.py  image_panel.py  main_window.py  ocr_batch_worker.py
