[project]
name = "form-reader-comparitor-llm"
version = "0.1.0"
description = "Stage 1: PyQt6 batch comparator with Ollama vision LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
    "httpx>=0.27",
    "Pillow>=10.0",
    "pymupdf>=1.24",
]

[project.scripts]
form-reader = "form_reader.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/form_reader"]
